@@ -1,3 +1,8 @@
+2013-08-17  Brandon Invergo  <brandon@invergo.net>
+
+	* pyconf.in: Handle different exceptions being thrown by os.mkdir
+	in Python 2 vs Python 3
+
 2013-06-16  Brandon Invergo  <brandon@invergo.net>
 
 	* src/Makefile.in.make (DISTFILES): Add more files to the default
